fix(login.js): prevent user from using whitespace as a username

--- a/src/css/login.css
+++ b/src/css/login.css
@@ -51,6 +51,8 @@ h1 {
 }
 
 .input-container {
+    display: flex;
+    flex-direction: column;
     background-color: white;
     width: 100%;
     border-radius: 10px;
@@ -96,4 +98,12 @@ input {
 
 .btn:hover {
     cursor: pointer;
+}
+
+.error-message {
+    color: red;
+    margin-top: 3px;
+    text-align: center;
+    font-family: "Sanchez";
+    flex: 2;
 }
